--- a/New folder/index.html
+++ b/New folder/index.html
@@ -56,7 +56,7 @@
 </tr>
 
 <tr>
-<div class = "m4"> butterfly species including: </div> <br>
+<div class = "m4"> butterfly species including </div> <br>
 </tr>
 <br>
 <tr>
@@ -79,7 +79,7 @@
 
 <div class = "m4"> flash, making it look like the morpho is appearing and </div>
 
-<div class = "m4"> disappearing. </div> <br>
+<div class = "m4"> disappearing </div> <br>
 <br>
 
 <br>
